fixed alignment for buttons

--- a/src/components/HomePageLogin/login.module.css
+++ b/src/components/HomePageLogin/login.module.css
@@ -61,5 +61,9 @@ img {
 
   .buttons {
     text-align: center;
-    margin: 0 auto;
+    margin: 5 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally */
+    align-items: center;
   }
